// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > assethub xcm chain events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 4000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 15000)",
        "refTime": "(rounded 1400000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > assethub-final-balance 1`] = `
{
  "balance": 10000000000,
  "extra": null,
  "reason": {
    "sufficient": null,
  },
  "status": "Liquid",
}
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > frequency-check-foreign-assets-account 1`] = `
{
  "balance": 1000000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > frequency-events-after-xcm 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 2000)",
          "refTime": "(rounded 410000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 98000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "who": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
    },
    "method": "Upgraded",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 3100000)",
      "who": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
    },
    "method": "Withdraw",
    "section": "balances",
  },
  {
    "data": {
      "amount": 10000000000,
      "who": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
    },
    "method": "Burned",
    "section": "balances",
  },
  {
    "data": {
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "balance": 100000000000,
      "owner": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
    },
    "method": "Burned",
    "section": "foreignAssets",
  },
  {
    "data": {
      "account": "5EYCAe5ijiYgWYWi1fs8Xz1td1djEtJVVnNfzvDRP4VtLL7Y",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "5EYCAe5ijiYgWYWi1fs8Xz1td1djEtJVVnNfzvDRP4VtLL7Y",
      "freeBalance": 10000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
  {
    "data": {
      "amount": 10000000000,
      "who": "5EYCAe5ijiYgWYWi1fs8Xz1td1djEtJVVnNfzvDRP4VtLL7Y",
    },
    "method": "Minted",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 31000000000)",
      "assetId": {
        "interior": "Here",
        "parents": 1,
      },
      "owner": "5EYCAe5ijiYfyeZ2JJCGq56LmPyNRAKzpG4QkoQkkQNB5e6Z",
    },
    "method": "Issued",
    "section": "foreignAssets",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
      "message": [],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": {
                  "ByGenesis": "(hash)",
                },
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "assets": {
        "V5": [
          {
            "fun": {
              "Fungible": "(rounded 39000000000)",
            },
            "id": {
              "interior": "Here",
              "parents": 1,
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": {
                  "ByGenesis": "(hash)",
                },
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "AssetsTrapped",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 25000)",
            "refTime": "(rounded 5300000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "amount": "(rounded 280000)",
      "who": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
    },
    "method": "Deposit",
    "section": "balances",
  },
  {
    "data": {
      "actualFee": "(rounded 2800000)",
      "tip": 0,
      "who": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
    },
    "method": "TransactionFeePaid",
    "section": "transactionPayment",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 5800000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > frequency-final-balance 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 89997164842,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > frequency-final-balance 2`] = `
{
  "balance": 900000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > frequency-outbound-hrmp-messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v5": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 30000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "payFees": {
              "asset": {
                "fun": {
                  "fungible": 30000000000,
                },
                "id": {
                  "interior": {
                    "here": null,
                  },
                  "parents": 1,
                },
              },
            },
          },
          {
            "receiveTeleportedAsset": [
              {
                "fun": {
                  "fungible": 10000000000,
                },
                "id": {
                  "interior": {
                    "x1": [
                      {
                        "parachain": 4000,
                      },
                    ],
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 2,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 1000,
  },
]
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > initial-assethub-check-system-account 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 10000000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`Teleport XFRQCY to AssetHub with DOT fee > Teleport XFRQCY to AssetHub with DOT fee > initial-frequency-check-system-account 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 100000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;
